# wan2_2_video_service

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
client/: submit_animate.py
scripts/: download_huggingface.py  download_model.py  download_modelscope.py
server/: __init__.py  animate_service.py  run_server.py
tests/: README.md  test_device.py  test_flash_attn.py
wan/: animate.py
